fixed collapsed sensor list graph button growing

--- a/app/sensor-list/sensor-list.less
+++ b/app/sensor-list/sensor-list.less
@@ -94,6 +94,7 @@
 .small-hidden-sensor-graph-container {
     height: 64px !important;
     width: auto !important;
+    max-width: 201px;
     top: auto !important;
     left: auto !important;
     bottom: 40px !important;
